# sg

./: .gitignore  CMakeLists.txt  Makefile.am  autoall  autoget  configure.ac  sg.sln  vcpkgget
example/bouncer/: BouncerConfig.h.in  BouncerDecoder.cpp  BouncerDecoder.h  BouncerDispatcher.cpp  BouncerDispatcher.h  BouncerProfile.cpp  BouncerProfile.h  BouncerReactor.cpp  BouncerReactor.h  BouncerRestService.cpp  BouncerRestService.h  CMakeLists.txt  Makefile.am  RestBouncer.cpp  RestBouncer.h  RestSettings.cpp  RestSettings.h  bouncer.vcxproj  bouncer.vcxproj.filters  configure.ac  main.cpp
example/discoveryservice/: CMakeLists.txt  DiscoveryApi.cpp  DiscoveryApi.h  DiscoveryClient.cpp  DiscoveryClient.h  DiscoveryDispatcher.cpp  DiscoveryDispatcher.h  DiscoveryRequester.cpp  DiscoveryRequester.h  DiscoveryService.cpp  DiscoveryService.h  DiscoveryServiceConfig.h.in  MSearchMessage.cpp  MSearchMessage.h  MSearchReactor.cpp  MSearchReactor.h  MSearchResponseReactor.cpp  MSearchResponseReactor.h  Makefile.am  NotifyReactor.cpp  NotifyReactor.h  RequestSearch.cpp  RequestSearch.h  RequestSearchReactor.cpp  RequestSearchReactor.h  ServiceDescription.h  configure.ac  discoveryservice.vcxproj  discoveryservice.vcxproj.filters
example/metricator/: CMakeLists.txt  GetDescriptionReactor.cpp  GetDescriptionReactor.h  Makefile.am  MetricatorConfig.h.in  MetricatorDispatcher.cpp  MetricatorDispatcher.h  MetricatorMessageDecoder.cpp  MetricatorMessageDecoder.h  MetricatorRequestReactor.cpp  MetricatorRequestReactor.h  configure.ac  main.cpp  metricator.vcxproj  metricator.vcxproj.filters
example/metricatorapi/: CMakeLists.txt  Makefile.am  Metric.h  MetricatorApi.cpp  MetricatorApi.h  MetricatorApiConfig.h.in  MetricatorLogger.cpp  MetricatorLogger.h  MetricatorRequest.cpp  MetricatorRequest.h  MetricatorRequestEncoder.cpp  MetricatorRequestEncoder.h  MetricatorRequester.cpp  MetricatorRequester.h  configure.ac  metricatorapi.vcxproj  metricatorapi.vcxproj.filters
example/myserver/: CMakeLists.txt  Makefile.am  MyService.cpp  MyService.h  UpdateReactor.cpp  UpdateReactor.h  VersionReactor.cpp  VersionReactor.h  configure.ac  main.cpp
example/simplewebserver/: CMakeLists.txt  GetFileApi.cpp  GetFileApi.h  GetFileFactory.cpp  GetFileFactory.h  GetFileMessage.cpp  GetFileMessage.h  GetFileReactor.cpp  GetFileReactor.h  Makefile.am  SimpleWebDispatcher.cpp  SimpleWebDispatcher.h  SimpleWebServerConfig.h  SimpleWebServerConfig.h.in  SimpleWebService.cpp  SimpleWebService.h  build.sh  cert.pem  configure.ac  gencert.sh  main.cpp  selfsigned.key  simplewebserver.vcxproj  simplewebserver.vcxproj.filters
example/streetgangapi/: BinaryRequestByebye.cpp  BinaryRequestByebye.h  BinaryRequestCreateWorld.cpp  BinaryRequestCreateWorld.h  BinaryRequestGetScene.cpp  BinaryRequestGetScene.h  BinaryRequestGetVersion.cpp  BinaryRequestGetVersion.h  BinaryResponseCreateWorld.cpp  BinaryResponseCreateWorld.h  BinaryResponseError.cpp  BinaryResponseError.h  BinaryResponseGetScene.cpp  BinaryResponseGetScene.h  BinaryResponseGetVersion.cpp  BinaryResponseGetVersion.h  BinaryStreetGangRequester.cpp  BinaryStreetGangRequester.h  BinaryStreetGangResponder.cpp  BinaryStreetGangResponder.h  CMakeLists.txt  Makefile.am  MessageBase.cpp  MessageBase.h  PBMessage.h  PBRequestByebye.cpp  PBRequestByebye.h  PBRequestCreateWorld.cpp  PBRequestCreateWorld.h  PBRequestGetScene.cpp  PBRequestGetScene.h  PBRequestGetVersion.cpp  PBRequestGetVersion.h  PBResponseCreateWorld.cpp  PBResponseCreateWorld.h  PBResponseError.cpp  PBResponseError.h  PBResponseGetScene.cpp  PBResponseGetScene.h  PBResponseGetVersion.cpp  (+66 more)
example/streetgangclient/: CMakeLists.txt  Makefile.am  ResponseCreateWorldReactor.cpp  ResponseCreateWorldReactor.h  ResponseErrorReactor.cpp  ResponseErrorReactor.h  ResponseGetSceneReactor.cpp  ResponseGetSceneReactor.h  ResponseGetVersionReactor.cpp  ResponseGetVersionReactor.h  StreetGangBinaryClient.cpp  StreetGangBinaryClient.h  StreetGangBinaryClientDispatcher.cpp  StreetGangBinaryClientDispatcher.h  StreetGangClient.cpp  StreetGangClient.h  StreetGangClientConfig.h.in  StreetGangClientMessageDecoder.cpp  StreetGangClientMessageDecoder.h  StreetGangClientPBDecoder.cpp  StreetGangClientPBDecoder.h  StreetGangPBClient.cpp  StreetGangPBClient.h  StreetGangPBClientDispatcher.cpp  StreetGangPBClientDispatcher.h  configure.ac  main.cpp  streetgangclient.vcxproj  streetgangclient.vcxproj.filters
example/streetgangproto/: ByebyeRequest.proto  CMakeLists.txt  ErrorResponse.proto  GetVersionRequest.proto  Makefile.am  MessageHeader.proto  Point.proto  Rectangle.proto  StreetGangPBService.proto  build  configure.ac  generatepb  streetgangproto.vcxproj  streetgangproto.vcxproj.filters
example/streetgangserver/: CMakeLists.txt  Makefile.am  RequestByebyeReactor.cpp  RequestByebyeReactor.h  RequestCreateWorldReactor.cpp  RequestCreateWorldReactor.h  RequestErrorReactor.cpp  RequestErrorReactor.h  RequestGetSceneReactor.cpp  RequestGetSceneReactor.h  RequestGetVersionReactor.cpp  RequestGetVersionReactor.h  ResponseCreateWorldReactor.cpp  ResponseCreateWorldReactor.h  ResponseErrorReactor.cpp  ResponseErrorReactor.h  ResponseGetWorldReactor.cpp  ResponseGetWorldReactor.h  RestCreateWorld.cpp  RestCreateWorld.h  RestGetScene.cpp  RestGetScene.h  RestGetVersion.cpp  RestGetVersion.h  StreetGangBinaryDispatcher.cpp  StreetGangBinaryDispatcher.h  StreetGangBinaryService.cpp  StreetGangBinaryService.h  StreetGangMessageDecoder.cpp  StreetGangMessageDecoder.h  StreetGangPBDecoder.cpp  StreetGangPBDecoder.h  StreetGangPBDispatcher.cpp  StreetGangPBDispatcher.h  StreetGangPBService.cpp  StreetGangPBService.h  StreetGangReactor.cpp  StreetGangReactor.h  StreetGangRestDispatcher.cpp  StreetGangRestDispatcher.h  (+16 more)
example/worldapi/: CMakeLists.txt  Makefile.am  MessageBase.cpp  MessageBase.h  Point.h  Rectangle.h  RequestCreateWorld.cpp  RequestCreateWorld.h  World.h  (+21 more)
microreactor/: CMakeLists.txt  Makefile.am  MicroreactorConfig.h.in  build-debug  build.sh  configure.ac  microreactor.vcxproj  microreactor.vcxproj.filters
(+311 files in other folders)
