AUTOMAKE_OPTIONS = foreign
SUBDIRS = \
    microreactor \
    example/discoveryservice \
    example/metricatorapi \
    example/metricator \
    example/streetgangapi \
	example/worldapi \
    example/worldserver \
    example/streetgangserver \
    example/streetgangclient \
    example/simplewebserver \
    example/bouncer
