#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([sg], [1.0], [BUG-REPORT-ADDRESS])
#AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE
#AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS( \
    [microreactor] \
    [example/discoveryservice] \
    [example/metricatorapi] \
    [example/metricator] \
    [example/streetgangapi] \
    [example/streetgangclient] \
    [example/streetgangserver] \
    [example/simplewebserver] \
    [example/bouncer]
)

AC_OUTPUT

